Fix for bug#4669, Scans do not ignore uncommitted inserts (instead hang on lock)